deploy/gke/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: middleware
  template:
    metadata:
      labels:
        app: middleware   
    spec:
      volumes:
        - name: google-sa-key
          secret:
            secretName: google-sa-key
      containers:
        - name: middleware
          image: change-with-your-container-registry-url
          volumeMounts:
            - name: google-sa-key
              readOnly: true
              mountPath: "/app/key.json"
              subPath: "key-b23de2b2ae9.json"
          ports:
          - containerPort: 58024
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              ephemeral-storage: 1Gi
              memory: 512Mi
            limits:
              cpu: 250m
              ephemeral-storage: 1Gi
              memory: 512Mi
          livenessProbe:
            httpGet:
              port: 58024
              path: /
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 58024
              path: /
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
