deploy/gke/service.yml
apiVersion: v1
kind: Service
metadata:
  name: middleware-svc
spec:
  selector:
    app: middleware
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 58024
