deploy/gke/ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "middleware-ingress"
  annotations:
    networking.gke.io/managed-certificates: "aladin"
    networking.gke.io/v1beta1.FrontendConfig: "middleware-frontend-config"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        backend:
          service:
            name: "middleware-svc"
            port:
              number: 80
        pathType: "Prefix"
    host: "middleware.domain.com"
